# Ayurveda-ai

./: GRAPH_STRUCTURE.md  HUGGING_FACE_UPDATE.md  Hackathon.txt  README.md  SETUP_COMPLETE.txt  START_HERE.md  STATUS_DASHBOARD.txt  example_usage.py  inference.py  input_example.py  main.py  pyproject.toml  requirements.txt  requirements_no_audio.txt
agents/: __init__.py  dosha_agent.py  guidance_agent.py  safety_agent.py  symptom_agent.py
app/: api.py  main.py  main_updated.py
dataset/: ayurveda_finetune.json  scanned_pdf.py  table_pdf.py
docs/: COMPLETE_IMPLEMENTATION.md  Hackathon.txt  IMPLEMENTATION_SUMMARY.md  LANGGRAPH_GUIDE.md  PROJECT_STRUCTURE.md  README_LANGGRAPH.md  architecture.md  safety.md
graph/: langgraph_flow.py  pipeline.py  state.py
input/: __init__.py  speech_to_text.py  text_input.py  voice_input.py
models/: medgemma_loader.py
models/medgemma-ayurveda-lora/final/: adapter_config.json
prompts/: dataset.txt  dosha.txt  guidance.txt  safety.txt  symptom.txt
scripts/: evaluate.py  generate_charts.py
